# qlith

./: .cursorrules  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NEXT.md  PLAN.md  README.macOS.txt  README.md  TODO.md  build_macos.sh  external.txt  llms.txt  qlith-mini.txt  qlith-pro.txt
.cursor/rules/: css-processing-model.mdc  document-container.mdc  graphics-rendering.mdc  layout-engine-algorithms.mdc
.giga/: specifications.json
.specstory/: .project.json
.specstory/history/: 2025-04-26_21-51-implementing-todo-list-in-markdown.md  2025-04-26_22-28-refactoring-plan-for-qlith-pro-project.md  2025-04-26_22-50-continuation-of-discussion.md  2025-04-26_22-54-building-@qlith-pro-for-macos.md  2025-04-26_23-01-create-cmakelists-txt-file.md  2025-04-27_00-34-implementing-todo-list-in-markdown.md  2025-04-27_00-34-untitled.md  2025-04-27_01-40-building-qlith-for-macos.md  2025-05-11_09-55-analyzing-qlith-mini-build-issues.md  2025-05-11_10-11-cli-file-path-handling-issue.md  2025-05-11_10-49-setting-script-directory-variable.md  2025-05-11_11-03-implementing-todo-list-in-markdown.md  2025-05-11_12-11-debugging-segmentation-fault-in-qlith.md  2025-05-11_14-03-segfault-fix-plan-for-libraries.md  2025-05-11_18-41-implementing-todo-list-in-markdown.md  2025-05-11_18-55-implementing-todo-list-in-markdown.md  2025-05-11_19-09-qt5-build-errors-undeclared-identifiers.md  2025-05-11_20-05-html-processing-error-troubleshooting.md  2025-05-11_20-12-html-file-processing-troubleshooting.md  2025-05-11_20-33-html-processing-error-missing-file-issue.md  2025-05-11_20-41-app-window-maximization-and-png-generation-issues.md  2025-05-11_21-22-cmake-build-errors-in-qlith-mini.md  2025-05-11_21-46-qlith-renderer-output-issues.md  2025-05-11_21-58-output-file-duplication-issue.md  2025-05-11_22-02-rendering-issues-with-litehtml-and-widget-size.md  2025-05-11_22-19-pro-engine-rendering-issue.md  2025-05-11_22-19-untitled.md
browser/: main.cpp  mainwindow.h
cmake/: MacOSXBundleInfo.plist.in  qlithConfig.cmake.in
examples/: complex_tables.html  index.md  linear_gradients.html  media_queries.html  run-example.py  run-examples.sh  runme.sh  simple_test.html
qlitehtml/: CMakeLists.txt
qlitehtml/browser/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  minimal_main.cpp
qlitehtml/src/: CMakeLists.txt  container_qpainter.cpp  container_qpainter.h  container_qpainter_p.h  qlitehtml_global.h  qlitehtmlwidget.cpp  qlitehtmlwidget.h
qlith-mini/: CMakeLists.txt  README.md  build_macos.sh  qlith-run  run-mini.sh  runme.sh
qlith-mini/browser/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
qlith-mini/src/: CMakeLists.txt  container_qpainter.cpp  container_qpainter.h  qlith_global.h  qlithwidget.cpp  qlithwidget.h
qlith-pro/: CMakeLists.txt  README.macOS.md  build_macos.sh  qlith-pro-run  run-pro.sh  runme.sh  test.sh
qlith-pro/cmake/: MacOSOpenGLFix.cmake
qlith-pro/include/qlith/: affinetransform.h  bitmapimage.h  color.h  common.h  container_qt5.h  container_qt5_wrapper.h  context.h  contextshadow.h  floatpoint.h  floatpoint3d.h  floatquad.h  floatrect.h  floatsize.h  fontcache.h  gradient.h  graphicscontext.h  image.h  imagedecoder.h  imagedecoderqt.h  imageobserver.h  imagesource.h  intpoint.h  intrect.h  intsize.h  litehtml.h  litehtmlwidget.h  mainwindow.h  mimetyperegistry.h  mimetyperegistryqt.h  pathqt.h  pngimagedecoder.h  purgeablebuffer.h  rgba32bufferqt.h  shadowdata.h  sharedbuffer.h  stillimageqt.h  styleimage.h  transformationmatrix.h  vectortraits.h
qlith-pro/resources/: res.qrc
qlith-pro/src/: common.cpp  contextshadow.cpp  floatpoint.cpp  floatpoint3d.cpp  floatquad.cpp  floatrect.cpp  floatsize.cpp  gradient.cpp  graphicscontext.cpp  image.cpp  imagedecoder.cpp  imagedecoderqt.cpp  imageobserver.cpp  imagesource.cpp  intpoint.cpp  intrect.cpp  intsize.cpp  mimetyperegistry.cpp  mimetyperegistryqt.cpp  pathqt.cpp  pngimagedecoder.cpp  purgeablebuffer.cpp  rgba32bufferqt.cpp  shadowdata.cpp  sharedbuffer.cpp  stillimageqt.cpp  styleimage.cpp  transformationmatrix.cpp
qlith-pro/src/gui/: container_qt5.cpp  fontcache.cpp  litehtmlwidget.cpp  litehtmlwidget.h  main.cpp  mainwindow.cpp
qlith-pro/test_app/: color_test.cpp
qlith-pro/tmp/qlith-pro_autogen/: deps  mocs_compilation.cpp
qlith-pro/tmp/qlith-pro_autogen/BMYM6N7PWQ/: moc_container_qt5.cpp.d  moc_litehtmlwidget.cpp.d  moc_mainwindow.cpp.d
src/: container_qpainter_p.h  qlithwidget.h
test_app/: main.cpp  test_app.pro
test_files/: basic_layout.html  fl8.html  fl8a.html  flexbox_basics.html  float_layout.html  simple.html  vl.html
test_files/fl8_files/: css2
test_files/fl8a_files/: 0.3a8d48ca3d0707671753.widget.js  1.a3ffcd6f3313507cee9f.widget.js  10.9a0814892cc9b82b8de1.widget.js  11.ed6b032029a0cf540b22.widget.js  16.7bc496b5a4edd0464d9d.widget.js  33000000200.js  A4199684-f6ea-4f2e-a843-f1ac6d70fb5d1.js  Ik_T_GW2iiM.html  base.js  css  css(1)  css2  embed.js  fastspring-builder.min.js  fontlab.29b3904c7.js  fontlab.9ac6f4239.css  jie2rmw.js  js  mwf-slideshow-wf.html  remote.js  saved_resource(1).html  saved_resource.html  uikit.min.css  widget.js
test_files/vl_files/: css  frz6rga.js  vexy-lines.webflow.851f104f5.css
